test/tests/diagnostics/syntax_err06/jastadd.err.expected
Problems during JRAG parsing:
Error at tests/diagnostics/syntax_err06/Test.jrag:4:6: unexpected token "int":
  eq int A.s() = 3;
     ^^^
